# wagtail-devtools

./: .coverage.Torchboxs-MacBook-Pro-2.local.56210.965010  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  sandboxmanage.py  test_all.sh  test_empty.sh  testmanage.py  testmanage_empty.py  tox.ini  tsconfig.json  webpack.config.js
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: test.yml
docs/: admin_responses.md  content_types.md
sandbox/: urls.py  wsgi.py
sandbox/fixtures/data/: data.json  wagtail_41_plus_data.json  wagtail_52_plus_data.json
sandbox/home/: models.py
sandbox/home/migrations/: 0003_genericsetting_testmodeladmin_testsnippet_and_more.py
sandbox/settings/: base.py  dev.py
scripts/: sandbox.py
wagtail_devtools/: __init__.py  apps.py  auth.py  reporting.py  wagtail_hooks.py
wagtail_devtools/api/: auth.py  conf.py  dataclasses.py  helpers.py  serializers.py  urls.py  views.py
wagtail_devtools/management/commands/: _base_admin_responses.py  _base_content_types.py  admin_responses.py  check_responses.py  check_responses_playwright.py  content_types.py  generate_json_api.py  responses_report.py
wagtail_devtools/test/: __init__.py  apps.py  models.py  settings.py  urls.py  views.py  wagtail_hooks.py
wagtail_devtools/test/json/: page_types.json
wagtail_devtools/test/migrations/: 0002_create_homepage.py  0003_all.py  0003_genericsetting_testmodeladmin_testsnippet_and_more.py  0003_test_models.py  0004_secondhomepage.py  0004_standardpageone_standardpagethree_standardpagetwo.py  0005_frontendpage404_frontendpage500.py  0005_testmodeladminthree_testmodeladmintwo.py  0006_frontendpage200_frontendpage302.py  0006_rename_testmodeladmin_testmodeladminone.py  0009_testsnippetthree_testsnippettwo.py  (+5 more)
wagtail_devtools/test_empty/: settings.py
(+31 files in other folders)
