[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-devtools"
authors = [{name = "Nick Moreton", email = "nickmoreton@me.com"}]
description = "A set of developer tools in the form of management commands"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Django>=3.2",
    "Wagtail>=4.1,<6.0",
]
[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0",
    "responses==0.24.0",
]
ci = [
    "tox==4.11.3",
    "tox-gh-actions==3.1.3"
]
dev = [
    "black==23.9.1",
    "flake8==6.1.0",
    "isort==5.12.0",
    "coverage==7.3.2",
    "playwright==1.41.1",
]

[project.urls]
Home = "https://github.com/nickmoreton/wagtail-devtools"

[tool.flit.module]
name = "wagtail_devtools"

[tool.flit.sdist]
exclude = [
    "wagtail_devtools/static_src",
    "wagtail_devtools/test",
    "wagtail_devtools/static/wagtail_devtools/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
    "scripts",
    "sandbox",
]
